# CaiBotLite

./: .env.prod  .gitignore  README.md  bot.py  pyproject.toml
assets/terraria_data/: buff_id.json  config_id.json  item_id.json  npc_id.json  npcx_id.json  permission_id.json  prefix_id.json  project_id.json
caibotlite/: __main__.py  bot_event.py  constants.py  database.py
caibotlite/api/: file_api.py  misc_api.py  server_api.py
caibotlite/commands/: bot_commands.py  group_commands.py  help_list_commands.py  login_commands.py  search_commands.py  server_commands.py  server_manager_commands.py  user_commands.py
caibotlite/dependencies/: __init__.py  current_group.py  orignal_group.py  session.py
caibotlite/enums/: __init__.py  package_direction.py  package_type.py  server_type.py  shop_item_type.py  whitelist_result.py
caibotlite/event/: add_robot.py  member_add.py
caibotlite/managers/: __init__.py  connection_manager.py  group_manager.py  login_manager.py  server_manager.py  token_mannager.py  user_manager.py
caibotlite/markdown/: image.py  keyboard.py  tag.py
caibotlite/models/: __init__.py  connected_server.py  file_info.py  group.py  group_conifg.py  user.py  (+11 more)
common/: bag_png_helper.py  group.py  group_helper.py  process_png_helper.py  sensitive_words_filter.py  server.py  server_settings.py  statistics.py  terraria_id_helper.py  text_handler.py  url_handler.py  user.py
docs/: api.md
plugins/: cai_api.py  event_handler.py
src/: bot_events_handler.py  cai_api.py  database.py
terraria_id/: Buff_ID.json  Item_ID.json  NPC_ID.json  Project_ID.json
(+47 files in other folders)
